15/4 them upload file, chia trang bang Pageable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ logging.file.name=myapp.log
 logging.logback.rollingpolicy.max-file-size=2MB
 #thoi gian luu toi da 7 ngay
 logging.logback.rollingpolicy.max-history=7
+
+#do lon cua file cho phep upload
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
