--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ logging.logback.rollingpolicy.max-history=7
 #do lon cua file cho phep upload
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
+#message config (ho tro go tieng viet)
+spring.messages.basename=lang/message
+spring.messages.encoding=UTF-8
