--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.servlet.context-path=/
 #JDBC CONNECTION
 spring.datasource.username=root
 spring.datasource.password=12345678
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.url=jdbc:mysql://localhost:3306/demo2
 
 #cau hinh jpa
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
