--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.15</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
