13/5 thêm email, scheduler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,14 @@ spring.servlet.multipart.max-request-size=20MB
 #message config (ho tro go tieng viet)
 spring.messages.basename=lang/message
 spring.messages.encoding=UTF-8
+
+#mail server
+spring.mail.host=smtp.gmail.com
+spring.mail.username=huynguyenquang030803@gmail.com
+spring.mail.port=587
+#mat khau o day khong phai la mat khau minh hay dung, phai vao gg/myaccount de lay apppassword
+spring.mail.password=cnoxgnspylsjoxmi
+
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
