--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,5 @@ spring.mail.password=cnoxgnspylsjoxmi
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+jwt.secret=123456
