--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 jwt.secret=123456
+
+#kafka config
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
